test/good/strings/for02.px

for c in "abcdefg" by 3 do
    print c
