test/bad/loops/for05.px

for i in 5..4 by "3" do
    skip
